--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -13,10 +13,7 @@ layout: default
 <div class="section">
 	<div class="article-text">
 		{{ content }}
-	</div>
-</div>
-<div class="section">
-	<em>If you have any comments, please drop me an <script type="text/javascript">
+	<p><em>If you have any comments, please drop me an <script type="text/javascript">
 //<![CDATA[
 <!--
 var x="function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
@@ -37,4 +34,6 @@ while(x=eval(x));
 //]]>
 </script>.
 </em>
+</p>
+</div>
 </div>
