--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,7 @@ $base-grey: #4A494A;
 $base-light-grey: #9B9A9B;
 $base-lighter-grey: #D4D3D4;
 $base-red: #D0011B;
+$base-background-grey: #fffffe;
 
 @include establish-baseline;
 
@@ -43,11 +44,15 @@ p, footer, header{
 	hyphens: auto;
 }
 
-.title {
-	line-height: 1em;
+body {
+	background-color: $base-background-grey;
 }
 
-.article-text p+p{
+#articles .title, #article .title {
+	line-height: 1.2em;
+}
+
+.article-text p+p, #portfolio p+p{
 	margin-top: 1.4em;
 }
 
@@ -79,11 +84,23 @@ em, strong{
 
 // links 
 a {
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	color: $base-grey;
 	&:hover {
 		color: #D0001A;
 	}
 }
+
+
+// Lists
+
+ul {list-style-type: disc;}
+ol {list-style-type: decimal;}
+
 
 // misc
 
@@ -105,6 +122,7 @@ img {
 
 .article-date {
 	@include adjust-font-size-to(14px);
+	margin-bottom: .4em;
 }
 
 .article-title {
@@ -120,9 +138,41 @@ img {
 	}
 }
 
+figure {
+	figcaption {
+		text-align: center;
+		@include alternative-font;
+		color: $base-light-grey;
+		@include adjust-font-size-to(12px);
+	}
+}
+
+@include breakpoint($breakpoint-medium-width) {
+	$base-font-size: 18px;
+	$base-line-height: 28px;
+	@include establish-baseline;
+
+	p, footer, header{
+		@include adjust-font-size-to(18px);
+	}
+
+	.title {
+		line-height: 1.4em;
+		margin-bottom: .6em;
+	}
+
+	.article-date {
+		margin-bottom: 1.2em;
+	}
+}
+
 // adjust font size in large displays
 @include breakpoint($breakpoint-medium-wide) {
 	$base-font-size: 20px;
-	$base-line-height: 32px;
+	$base-line-height: 36px;
 	@include establish-baseline;
+
+	p, footer, header{
+		@include adjust-font-size-to(20px);
+	}
 }
