--- a/site/css/screen.css
+++ b/site/css/screen.css
@@ -79,36 +79,36 @@ html {
   line-height: 1.5em;
 }
 
-/* line 15, ../../sass/_base.scss */
+/* line 16, ../../sass/_base.scss */
 html {
   font-family: "vollkorn",serif;
   -webkit-text-size-adjust: none;
 }
 
-/* line 22, ../../sass/_base.scss */
+/* line 23, ../../sass/_base.scss */
 h1, h2, h3, h4, h5, h6 {
   color: #302f2f;
 }
 
-/* line 26, ../../sass/_base.scss */
+/* line 27, ../../sass/_base.scss */
 h1 {
   font-size: 2em;
   line-height: 1.5em;
 }
 
-/* line 30, ../../sass/_base.scss */
+/* line 31, ../../sass/_base.scss */
 h2 {
   font-size: 1.5em;
   line-height: 2em;
 }
 
-/* line 34, ../../sass/_base.scss */
+/* line 35, ../../sass/_base.scss */
 h3, h4, h5, h6 {
   font-size: 1.25em;
   line-height: 1.2em;
 }
 
-/* line 38, ../../sass/_base.scss */
+/* line 39, ../../sass/_base.scss */
 p, footer, header {
   color: #302f2f;
   font-size: 1em;
@@ -118,51 +118,71 @@ p, footer, header {
   hyphens: auto;
 }
 
-/* line 46, ../../sass/_base.scss */
-.title {
-  line-height: 1em;
+/* line 47, ../../sass/_base.scss */
+body {
+  background-color: #fffffe;
 }
 
-/* line 50, ../../sass/_base.scss */
-.article-text p + p {
+/* line 51, ../../sass/_base.scss */
+#articles .title, #article .title {
+  line-height: 1.2em;
+}
+
+/* line 55, ../../sass/_base.scss */
+.article-text p + p, #portfolio p + p {
   margin-top: 1.4em;
 }
 
-/* line 54, ../../sass/_base.scss */
+/* line 59, ../../sass/_base.scss */
 blockquote {
   font-style: italic;
   border-left: 0.2em solid #d4d3d4;
   margin: 1.4em 0;
   padding: 0.5em 1em;
 }
-/* line 59, ../../sass/_base.scss */
+/* line 64, ../../sass/_base.scss */
 blockquote footer {
   text-align: right;
 }
 
-/* line 64, ../../sass/_base.scss */
+/* line 69, ../../sass/_base.scss */
 em, strong {
   font-style: italic;
 }
 
 /* apply a natural box layout model to all elements */
-/* line 69, ../../sass/_base.scss */
+/* line 74, ../../sass/_base.scss */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 81, ../../sass/_base.scss */
+/* line 86, ../../sass/_base.scss */
 a {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   color: #4a494a;
 }
-/* line 83, ../../sass/_base.scss */
+/* line 93, ../../sass/_base.scss */
 a:hover {
   color: #D0001A;
 }
 
-/* line 90, ../../sass/_base.scss */
+/* line 101, ../../sass/_base.scss */
+ul {
+  list-style-type: disc;
+}
+
+/* line 102, ../../sass/_base.scss */
+ol {
+  list-style-type: decimal;
+}
+
+/* line 107, ../../sass/_base.scss */
 hr {
   border: 0;
   color: #d4d3d4;
@@ -170,27 +190,28 @@ hr {
   height: 1px;
 }
 
-/* line 97, ../../sass/_base.scss */
+/* line 114, ../../sass/_base.scss */
 img {
   max-width: 100%;
 }
 
-/* line 102, ../../sass/_base.scss */
+/* line 119, ../../sass/_base.scss */
 .date {
   color: #d0011b;
 }
 
-/* line 106, ../../sass/_base.scss */
+/* line 123, ../../sass/_base.scss */
 .article-date {
   font-size: 0.875em;
   line-height: 1.71429em;
+  margin-bottom: .4em;
 }
 
-/* line 110, ../../sass/_base.scss */
+/* line 128, ../../sass/_base.scss */
 .article-title {
   text-decoration: none;
 }
-/* line 113, ../../sass/_base.scss */
+/* line 131, ../../sass/_base.scss */
 .article-title.one-line {
   width: 100%;
   white-space: nowrap;
@@ -201,6 +222,44 @@ img {
   line-height: 1.2em;
 }
 
+/* line 142, ../../sass/_base.scss */
+figure figcaption {
+  text-align: center;
+  font-family: "futura-pt", Futura, “Trebuchet MS”, Arial, sans-serif;
+  color: #9b9a9b;
+  font-size: 0.75em;
+  line-height: 2em;
+}
+
+@media (min-width: 460px) {
+  /* line 61, ../../../../../../../../../../usr/local/rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  * html {
+    font-size: 112.5%;
+  }
+
+  /* line 64, ../../../../../../../../../../usr/local/rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  html {
+    font-size: 18px;
+    line-height: 1.55556em;
+  }
+
+  /* line 155, ../../sass/_base.scss */
+  p, footer, header {
+    font-size: 1em;
+    line-height: 1.55556em;
+  }
+
+  /* line 159, ../../sass/_base.scss */
+  .title {
+    line-height: 1.4em;
+    margin-bottom: .6em;
+  }
+
+  /* line 164, ../../sass/_base.scss */
+  .article-date {
+    margin-bottom: 1.2em;
+  }
+}
 @media (min-width: 760px) {
   /* line 61, ../../../../../../../../../../usr/local/rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   * html {
@@ -210,7 +269,13 @@ img {
   /* line 64, ../../../../../../../../../../usr/local/rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
     font-size: 20px;
-    line-height: 1.6em;
+    line-height: 1.8em;
+  }
+
+  /* line 175, ../../sass/_base.scss */
+  p, footer, header {
+    font-size: 1em;
+    line-height: 1.8em;
   }
 }
 /* line 5, ../../sass/modules/_logo.scss */
@@ -282,13 +347,18 @@ img {
   width: 100%;
   position: relative;
   margin-bottom: 1em;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   line-height: 0;
 }
-/* line 10, ../../sass/modules/_case.scss */
+/* line 15, ../../sass/modules/_case.scss */
 .case .case-thumbnail {
   width: 100%;
 }
-/* line 14, ../../sass/modules/_case.scss */
+/* line 19, ../../sass/modules/_case.scss */
 .case .case-title {
   display: block;
   position: absolute;
@@ -319,6 +389,13 @@ img {
     float: left;
   }
 }
+/* line 46, ../../sass/modules/_case.scss */
+.case:hover {
+  opacity: .6;
+  -webkit-filter: grayscale(1);
+  -moz-filter: grayscale(1);
+  filter: grayscale(1);
+}
 
 /* line 3, ../../sass/modules/_header.scss */
 .section-header {
@@ -332,8 +409,9 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  box-shadow: inset 0 6px 4px rgba(0, 0, 0, 0.2);
 }
-/* line 14, ../../sass/modules/_header.scss */
+/* line 16, ../../sass/modules/_header.scss */
 .section-header .sprite {
   position: absolute;
   width: 100%;
@@ -346,32 +424,34 @@ img {
   opacity: 0.4;
   z-index: 1;
 }
-/* line 26, ../../sass/modules/_header.scss */
+/* line 28, ../../sass/modules/_header.scss */
 .section-header .section {
   position: relative;
   height: 100%;
+  max-width: 700px;
+  margin: 0 auto;
   z-index: 2;
 }
-/* line 31, ../../sass/modules/_header.scss */
+/* line 35, ../../sass/modules/_header.scss */
 .section-header .section-title {
   color: white;
   padding-top: 1em;
 }
-/* line 35, ../../sass/modules/_header.scss */
+/* line 39, ../../sass/modules/_header.scss */
 .section-header .article-header {
   position: absolute;
   bottom: 1em;
   left: 0;
 }
-/* line 41, ../../sass/modules/_header.scss */
+/* line 45, ../../sass/modules/_header.scss */
 .section-header .article-date {
   color: white;
 }
-/* line 44, ../../sass/modules/_header.scss */
+/* line 48, ../../sass/modules/_header.scss */
 .section-header h2 {
   color: white;
 }
-/* line 47, ../../sass/modules/_header.scss */
+/* line 51, ../../sass/modules/_header.scss */
 .section-header p {
   color: white;
   -webkit-hyphens: none;
@@ -383,54 +463,58 @@ img {
   .section-header {
     height: 20em;
   }
-  /* line 56, ../../sass/modules/_header.scss */
+  /* line 60, ../../sass/modules/_header.scss */
   .section-header .portfolio-header {
     margin-top: 6em;
     text-align: center;
   }
-  /* line 61, ../../sass/modules/_header.scss */
+  /* line 65, ../../sass/modules/_header.scss */
   .section-header .title-seperator {
     margin: 1em auto;
   }
 }
 
-/* line 68, ../../sass/modules/_header.scss */
+/* line 72, ../../sass/modules/_header.scss */
 .about-header {
   text-align: center;
   margin-top: 2.5em;
 }
-/* line 73, ../../sass/modules/_header.scss */
+/* line 77, ../../sass/modules/_header.scss */
 .about-header h2 {
   font-size: 1.8em;
 }
-/* line 77, ../../sass/modules/_header.scss */
+/* line 81, ../../sass/modules/_header.scss */
 .about-header p {
-  font-family: "futura-pt", Futura, “Trebuchet MS”, Arial, sans-serif;
   font-size: 0.8em;
 }
 @media (min-width: 460px) {
-  /* line 68, ../../sass/modules/_header.scss */
+  /* line 72, ../../sass/modules/_header.scss */
   .about-header {
     margin-top: 4em;
   }
-  /* line 84, ../../sass/modules/_header.scss */
+  /* line 87, ../../sass/modules/_header.scss */
   .about-header h2 {
     font-size: 2.4em;
   }
-  /* line 87, ../../sass/modules/_header.scss */
+  /* line 90, ../../sass/modules/_header.scss */
   .about-header p {
     font-size: 1em;
   }
 }
 @media (min-width: 760px) {
-  /* line 68, ../../sass/modules/_header.scss */
+  /* line 72, ../../sass/modules/_header.scss */
   .about-header {
     margin-top: 5em;
   }
-  /* line 94, ../../sass/modules/_header.scss */
+  /* line 97, ../../sass/modules/_header.scss */
   .about-header h2 {
     font-size: 3em;
   }
+}
+
+/* line 104, ../../sass/modules/_header.scss */
+.article-header h2 {
+  line-height: 1.3em;
 }
 
 /* line 4, ../../sass/_layout.scss */
@@ -535,7 +619,7 @@ img {
 }
 /* line 96, ../../sass/_layout.scss */
 .symbol-seperator span {
-  background-color: white;
+  background-color: #fffffe;
   padding: 0 .2em;
 }
 
@@ -591,66 +675,109 @@ img {
   padding-bottom: 1em;
 }
 
-/* line 157, ../../sass/_layout.scss */
+@media (min-width: 460px) {
+  /* line 154, ../../sass/_layout.scss */
+  #home-portfolio {
+    margin-bottom: 2em;
+  }
+}
+@media (min-width: 760px) {
+  /* line 154, ../../sass/_layout.scss */
+  #home-portfolio {
+    margin-bottom: 4em;
+  }
+}
+
+/* line 163, ../../sass/_layout.scss */
+#home-recent {
+  max-width: 700px;
+  margin: 4em auto 0 auto;
+}
+
+/* line 172, ../../sass/_layout.scss */
 .blog-entry .excerpt {
   padding: 1em 0 2em 0;
 }
 
-/* line 166, ../../sass/_layout.scss */
+/* line 178, ../../sass/_layout.scss */
+#articles .excerpt p {
+  margin-left: 0;
+}
+
+/* line 187, ../../sass/_layout.scss */
 #gallery .portfolio {
   margin-top: 4em;
 }
 
-/* line 174, ../../sass/_layout.scss */
-.article-text img, #portfolio img {
+/* line 195, ../../sass/_layout.scss */
+.article-text img, .article-text table, .article-text figure, #portfolio img, #portfolio table, #portfolio figure {
   margin: 3em 0;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 181, ../../sass/_layout.scss */
-.article-text p, .article-text blockquote, #portfolio p, #portfolio blockquote {
+/* line 202, ../../sass/_layout.scss */
+.article-text figure img, #portfolio figure img {
+  margin: 0 auto 1em auto;
+}
+/* line 206, ../../sass/_layout.scss */
+.article-text p, .article-text blockquote, .article-text ul, .article-text ol, #portfolio p, #portfolio blockquote, #portfolio ul, #portfolio ol {
   max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 212, ../../sass/_layout.scss */
+.article-text ul, .article-text ol, #portfolio ul, #portfolio ol {
+  margin: 1.4em auto;
+}
+/* line 216, ../../sass/_layout.scss */
+.article-text h3, #portfolio h3 {
+  max-width: 700px;
+  margin: 1em auto;
 }
 
-/* line 189, ../../sass/_layout.scss */
+/* line 225, ../../sass/_layout.scss */
 #portfolio h2 {
   font-family: "futura-pt", Futura, “Trebuchet MS”, Arial, sans-serif;
   font-weight: 700;
 }
-/* line 194, ../../sass/_layout.scss */
+/* line 230, ../../sass/_layout.scss */
 #portfolio h3 {
   text-align: center;
 }
-/* line 198, ../../sass/_layout.scss */
+/* line 234, ../../sass/_layout.scss */
 #portfolio .intro {
   font-size: 1.4em;
   padding: 1em 0;
 }
-/* line 203, ../../sass/_layout.scss */
+/* line 239, ../../sass/_layout.scss */
 #portfolio .portfolio-content {
   padding-top: 3em;
 }
-/* line 208, ../../sass/_layout.scss */
+/* line 244, ../../sass/_layout.scss */
 #portfolio .portfolio-header {
   margin-top: 3em;
   text-align: center;
 }
-/* line 211, ../../sass/_layout.scss */
+/* line 247, ../../sass/_layout.scss */
 #portfolio .portfolio-header h2 {
   font-size: 2.4em;
-  line-height: 1.33333em;
+  line-height: 1.5em;
 }
-/* line 215, ../../sass/_layout.scss */
+/* line 251, ../../sass/_layout.scss */
 #portfolio .portfolio-header p {
   font-size: 0.9em;
-  line-height: 1.77778em;
+  line-height: 2em;
 }
-/* line 218, ../../sass/_layout.scss */
+/* line 254, ../../sass/_layout.scss */
 #portfolio .portfolio-header .title {
   text-transform: uppercase;
 }
-/* line 223, ../../sass/_layout.scss */
+/* line 257, ../../sass/_layout.scss */
+#portfolio .portfolio-header .subtitle {
+  margin-bottom: 1em;
+}
+/* line 262, ../../sass/_layout.scss */
 #portfolio .title-seperator {
   height: 0.2em;
   width: 2em;
@@ -658,44 +785,65 @@ img {
   border-top: 1px solid #d4d3d4;
   border-bottom: 1px solid #d4d3d4;
 }
-/* line 232, ../../sass/_layout.scss */
+/* line 271, ../../sass/_layout.scss */
 #portfolio .skills {
   margin-top: .5em;
 }
 @media (min-width: 460px) {
-  /* line 237, ../../sass/_layout.scss */
+  /* line 276, ../../sass/_layout.scss */
   #portfolio p {
     width: 80%;
     margin: 0 auto;
   }
-  /* line 241, ../../sass/_layout.scss */
-  #portfolio .portfolio-header h2 {
-    font-size: 3.6em;
-    line-height: 1.33333em;
+  /* line 281, ../../sass/_layout.scss */
+  #portfolio ul, #portfolio ol {
+    width: 80%;
   }
-  /* line 245, ../../sass/_layout.scss */
+  /* line 285, ../../sass/_layout.scss */
+  #portfolio .portfolio-header h2 {
+    font-size: 2.8em;
+    line-height: 1.28571em;
+  }
+  /* line 289, ../../sass/_layout.scss */
   #portfolio .intro {
     font-size: 1.6em;
   }
 }
 @media (min-width: 760px) {
-  /* line 251, ../../sass/_layout.scss */
+  /* line 295, ../../sass/_layout.scss */
   #portfolio p {
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
   }
-  /* line 255, ../../sass/_layout.scss */
+  /* line 300, ../../sass/_layout.scss */
+  #portfolio ul, #portfolio ol {
+    width: 70%;
+  }
+  /* line 304, ../../sass/_layout.scss */
   #portfolio .portfolio-header h2 {
     font-size: 3.6em;
-    line-height: 1.33333em;
+    line-height: 1.5em;
   }
-  /* line 258, ../../sass/_layout.scss */
+  /* line 307, ../../sass/_layout.scss */
   #portfolio img {
     margin: 4em auto;
   }
+  /* line 311, ../../sass/_layout.scss */
+  #portfolio figure {
+    margin: 3em auto 4em auto;
+  }
+  /* line 315, ../../sass/_layout.scss */
+  #portfolio figure img {
+    margin: 1em auto;
+  }
 }
 
-/* line 264, ../../sass/_layout.scss */
+/* line 321, ../../sass/_layout.scss */
 img.shadow {
   box-shadow: 0 0 2px #d4d3d4;
+}
+
+/* line 327, ../../sass/_layout.scss */
+ul.blog-list li {
+  list-style: none;
 }
